--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ h1 {
     font-size: xx-large;
 }
 
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px
+    }
+
 #nav {
     height: 60px;
     width: auto;
@@ -11,6 +22,24 @@ h1 {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+}
+
+#box-row {
+    display: flex;
+    justify-content: center;
+    margin: 10vw;
+}
+#box-row {
+    height: 200px;
+    background-color: burlywood;
+    display: flex;
+    justify-content: center;
+    padding-top: 5vw;
+    text-align: center;
+}
+
+#body-box {
+    margin-top: 3vw;
 }
 
 
