--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ button {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px
+    font-size: 16px;
+    padding: 15px 32px;
+    margin: 4px 0px;
     }
 
 #nav {
@@ -30,7 +31,7 @@ button {
     margin: 10vw;
 }
 #box-row {
-    height: 200px;
+    height: auto;
     background-color: burlywood;
     display: flex;
     justify-content: center;
@@ -38,8 +39,14 @@ button {
     text-align: center;
 }
 
-#body-box {
+#body-box, #body-button {
     margin-top: 3vw;
+    margin-bottom: 3vw;
+}
+
+#box2 {
+    display: flex;
+    flex-direction: column;
 }
 
 
