--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+a:link {
+    text-decoration: none;
+}
+
+p {
+    display: flex;
+    justify-content: space-between;
+}
+
 #title-box, h1 {
     font-size: xx-large;
 }
@@ -44,12 +53,12 @@ button {
     text-align: center;
 }
 
-#body-box, #body-button, #answer-buttons, #input-text, #submit-box {
+#body-box, #body-button, #answer-buttons, #input-text, #submit-box, #list-winners {
     margin-top: 1.5vw;
     margin-bottom: 1.5vw;
 }
 
-#box2, #btn-box, #form-box, #submit-box {
+#box2, #btn-box, #form-box, #submit-box, #list-winners {
     display: flex;
     flex-direction: column;
 }
